--- a/LanHouseCodigo/Properties/Resources.resx
+++ b/LanHouseCodigo/Properties/Resources.resx
@@ -118,19 +118,37 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="pc 15 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pc 15 (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pc 15_resized" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pc 15_resized.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pc 15 (1)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pc 15 (1)1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="imagem_Lanhouse_resized (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imagem_Lanhouse_resized (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pc 15" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pc 15.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Documento A4 Branco e Lilás_resized2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Documento A4 Branco e Lilás_resized2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iamgem usuario_resized_resized_resized" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iamgem usuario_resized_resized_resized.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pc 15 (1)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pc 15 (1)1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pc 15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pc 15.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pc 15 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pc 15 (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Documento A4 Branco e Lilás_resized" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Documento A4 Branco e Lilás_resized.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pc 15 (1)_resized" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pc 15 (1)_resized.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Documento A4 Branco e Lilás_resized1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Documento A4 Branco e Lilás_resized1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Documento A4 Branco e Lilás" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Documento A4 Branco e Lilás.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
